# greyhack-terminal-ui

./: Makefile  README.md
examples/raycast-fps/: README.md  fps.src
examples/raycast-fps/libraries/: canvas.src  colors.src  enemies.src  gamestate.src  inputstate.src  level.src  player.src  renderer.src  sounds.src  utils.src
examples/snake-game/: README.md  snake.src
examples/snake-game/libraries/: canvas.src  colors.src  gamestate.src  inputstate.src  renderer.src  renderstate.src  sounds.src  utils.src
examples/todo-app/: README.md  todo.src
examples/todo-app/libraries/: canvas.src  colors.src  renderer.src  renderstate.src  todostate.src  utils.src
examples/todo-app/libraries/scenes/: add_scene.src  edit_scene.src  list_scene.src  scene_manager.src
native/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.linux  README.md  build.bat  build.sh  docker-build.sh  setup-sdk.py  ulbridge.cc
native/cmake/: mingw-toolchain.cmake
src/: GreyHackTerminalUI.csproj  GreyHackTerminalUI.sln  Plugin.cs  PluginInfo.cs
src/Browser/Core/: ULBridge.cs  UltralightBrowserCore.cs
src/Browser/GameBrowser/: HtmlBrowserPatch.cs  HtmlImagePreprocessor.cs  HtmlStyleInjector.cs  HtmlTemplateReplacer.cs  LegacyHtmlConverter.cs  UltralightHtmlBridge.cs  UltralightInputHandler.cs
src/Browser/Window/: BrowserManager.cs  UltralightBrowser.cs  UltralightManager.cs  UltralightWindow.cs
src/Canvas/: CanvasManager.cs  CanvasRenderer.cs  CanvasWindow.cs  TerminalContext.cs
src/Patches/: MenuInicioPatch.cs  SettingsWindowPatch.cs  TerminalPatches.cs
src/Runtime/: RuntimeManager.cs  TerminalContext.cs  TerminalToast.cs
src/Settings/: PluginSettings.cs  SettingsWindow.cs
src/Sound/: MidiNote.cs  SoundManager.cs  SoundPlayer.cs
src/Utils/: DialogBuilder.cs  GameThemeHelper.cs  NativeLibraryLoader.cs  StringCompressorHelper.cs
src/Utils/Loaders/: INativeLibraryLoader.cs  LinuxLibraryLoader.cs  MacOSLibraryLoader.cs  WindowsLibraryLoader.cs
src/VM/: AST.cs  Bytecode.cs  Compiler.cs  Intrinsics.cs  Lexer.cs  Parser.cs  SoundInstance.cs  Token.cs  VirtualMachine.cs
tests/: GreyHackTerminalUI.Tests.csproj  README.md
tests/Browser/: HtmlProcessorTests.cs  TerminalStateSerializationTests.cs
tests/Sound/: MidiNoteTests.cs
tests/VM/: CompilerTests.cs  IntegrationTests.cs  LexerTests.cs  MockIntrinsics.cs  ParserTests.cs  SoundInstanceTests.cs  VirtualMachineTests.cs
